pygui/cimgui_test.h

typedef enum{ImGuiInputTextFlags_None,ImGuiInputTextFlags_CharsDecimal,ImGuiInputTextFlags_CharsHexadecimal,ImGuiInputTextFlags_CharsUppercase,ImGuiInputTextFlags_CharsNoBlank,ImGuiInputTextFlags_AutoSelectAll,ImGuiInputTextFlags_EnterReturnsTrue,ImGuiInputTextFlags_CallbackCompletion,ImGuiInputTextFlags_CallbackHistory,ImGuiInputTextFlags_CallbackAlways,ImGuiInputTextFlags_CallbackCharFilter,ImGuiInputTextFlags_AllowTabInput,ImGuiInputTextFlags_CtrlEnterForNewLine,ImGuiInputTextFlags_NoHorizontalScroll,ImGuiInputTextFlags_AlwaysOverwrite,ImGuiInputTextFlags_ReadOnly,ImGuiInputTextFlags_Password,ImGuiInputTextFlags_NoUndoRedo,ImGuiInputTextFlags_CharsScientific,ImGuiInputTextFlags_CallbackResize,ImGuiInputTextFlags_CallbackEdit,ImGuiInputTextFlags_EscapeClearsAll,}ImGuiInputTextFlags_;
typedef enum{ImGuiItemFlags_None,ImGuiItemFlags_NoTabStop,ImGuiItemFlags_ButtonRepeat,ImGuiItemFlags_Disabled,ImGuiItemFlags_NoNav,ImGuiItemFlags_NoNavDefaultFocus,ImGuiItemFlags_SelectableDontClosePopup,ImGuiItemFlags_MixedValue,ImGuiItemFlags_ReadOnly,ImGuiItemFlags_NoWindowHoverableCheck,ImGuiItemFlags_Inputable,}ImGuiItemFlags_;
typedef enum{ImGuiItemStatusFlags_None,ImGuiItemStatusFlags_HoveredRect,ImGuiItemStatusFlags_HasDisplayRect,ImGuiItemStatusFlags_Edited,ImGuiItemStatusFlags_ToggledSelection,ImGuiItemStatusFlags_ToggledOpen,ImGuiItemStatusFlags_HasDeactivated,ImGuiItemStatusFlags_Deactivated,ImGuiItemStatusFlags_HoveredWindow,ImGuiItemStatusFlags_FocusedByTabbing,ImGuiItemStatusFlags_Visible,}ImGuiItemStatusFlags_;
typedef enum{ImGuiKey_None,ImGuiKey_Tab,ImGuiKey_LeftArrow,ImGuiKey_RightArrow,ImGuiKey_UpArrow,ImGuiKey_DownArrow,ImGuiKey_PageUp,ImGuiKey_PageDown,ImGuiKey_Home,ImGuiKey_End,ImGuiKey_Insert,ImGuiKey_Delete,ImGuiKey_Backspace,ImGuiKey_Space,ImGuiKey_Enter,ImGuiKey_Escape,ImGuiKey_LeftCtrl,ImGuiKey_LeftShift,ImGuiKey_LeftAlt,ImGuiKey_LeftSuper,ImGuiKey_RightCtrl,ImGuiKey_RightShift,ImGuiKey_RightAlt,ImGuiKey_RightSuper,ImGuiKey_Menu,ImGuiKey_0,ImGuiKey_1,ImGuiKey_2,ImGuiKey_3,ImGuiKey_4,ImGuiKey_5,ImGuiKey_6,ImGuiKey_7,ImGuiKey_8,ImGuiKey_9,ImGuiKey_A,ImGuiKey_B,ImGuiKey_C,ImGuiKey_D,ImGuiKey_E,ImGuiKey_F,ImGuiKey_G,ImGuiKey_H,ImGuiKey_I,ImGuiKey_J,ImGuiKey_K,ImGuiKey_L,ImGuiKey_M,ImGuiKey_N,ImGuiKey_O,ImGuiKey_P,ImGuiKey_Q,ImGuiKey_R,ImGuiKey_S,ImGuiKey_T,ImGuiKey_U,ImGuiKey_V,ImGuiKey_W,ImGuiKey_X,ImGuiKey_Y,ImGuiKey_Z,ImGuiKey_F1,ImGuiKey_F2,ImGuiKey_F3,ImGuiKey_F4,ImGuiKey_F5,ImGuiKey_F6,ImGuiKey_F7,ImGuiKey_F8,ImGuiKey_F9,ImGuiKey_F10,ImGuiKey_F11,ImGuiKey_F12,ImGuiKey_Apostrophe,ImGuiKey_Comma,ImGuiKey_Minus,ImGuiKey_Period,ImGuiKey_Slash,ImGuiKey_Semicolon,ImGuiKey_Equal,ImGuiKey_LeftBracket,ImGuiKey_Backslash,ImGuiKey_RightBracket,ImGuiKey_GraveAccent,ImGuiKey_CapsLock,ImGuiKey_ScrollLock,ImGuiKey_NumLock,ImGuiKey_PrintScreen,ImGuiKey_Pause,ImGuiKey_Keypad0,ImGuiKey_Keypad1,ImGuiKey_Keypad2,ImGuiKey_Keypad3,ImGuiKey_Keypad4,ImGuiKey_Keypad5,ImGuiKey_Keypad6,ImGuiKey_Keypad7,ImGuiKey_Keypad8,ImGuiKey_Keypad9,ImGuiKey_KeypadDecimal,ImGuiKey_KeypadDivide,ImGuiKey_KeypadMultiply,ImGuiKey_KeypadSubtract,ImGuiKey_KeypadAdd,ImGuiKey_KeypadEnter,ImGuiKey_KeypadEqual,ImGuiKey_GamepadStart,ImGuiKey_GamepadBack,ImGuiKey_GamepadFaceLeft,ImGuiKey_GamepadFaceRight,ImGuiKey_GamepadFaceUp,ImGuiKey_GamepadFaceDown,ImGuiKey_GamepadDpadLeft,ImGuiKey_GamepadDpadRight,ImGuiKey_GamepadDpadUp,ImGuiKey_GamepadDpadDown,ImGuiKey_GamepadL1,ImGuiKey_GamepadR1,ImGuiKey_GamepadL2,ImGuiKey_GamepadR2,ImGuiKey_GamepadL3,ImGuiKey_GamepadR3,ImGuiKey_GamepadLStickLeft,ImGuiKey_GamepadLStickRight,ImGuiKey_GamepadLStickUp,ImGuiKey_GamepadLStickDown,ImGuiKey_GamepadRStickLeft,ImGuiKey_GamepadRStickRight,ImGuiKey_GamepadRStickUp,ImGuiKey_GamepadRStickDown,ImGuiKey_MouseLeft,ImGuiKey_MouseRight,ImGuiKey_MouseMiddle,ImGuiKey_MouseX1,ImGuiKey_MouseX2,ImGuiKey_MouseWheelX,ImGuiKey_MouseWheelY,ImGuiKey_ReservedForModCtrl,ImGuiKey_ReservedForModShift,ImGuiKey_ReservedForModAlt,ImGuiKey_ReservedForModSuper,ImGuiKey_COUNT,ImGuiMod_None,ImGuiMod_Ctrl,ImGuiMod_Shift,ImGuiMod_Alt,ImGuiMod_Super,ImGuiMod_Shortcut,ImGuiMod_Mask_,ImGuiKey_NamedKey_BEGIN,ImGuiKey_NamedKey_END,ImGuiKey_NamedKey_COUNT,ImGuiKey_KeysData_SIZE,ImGuiKey_KeysData_OFFSET,}ImGuiKey;
typedef enum{ImGuiLayoutType_Horizontal,ImGuiLayoutType_Vertical}ImGuiLayoutType_;
typedef enum{ImGuiLocKey_TableSizeOne,ImGuiLocKey_TableSizeAllFit,ImGuiLocKey_TableSizeAllDefault,ImGuiLocKey_TableResetOrder,ImGuiLocKey_WindowingMainMenuBar,ImGuiLocKey_WindowingPopup,ImGuiLocKey_WindowingUntitled,ImGuiLocKey_DockingHideTabBar,ImGuiLocKey_COUNT,}ImGuiLocKey;
typedef enum{ImGuiLogType_None,ImGuiLogType_TTY,ImGuiLogType_File,ImGuiLogType_Buffer,ImGuiLogType_Clipboard,}ImGuiLogType;
typedef enum{ImGuiMouseButton_Left,ImGuiMouseButton_Right,ImGuiMouseButton_Middle,ImGuiMouseButton_COUNT}ImGuiMouseButton_;
typedef enum{ImGuiMouseCursor_None,ImGuiMouseCursor_Arrow,ImGuiMouseCursor_TextInput,ImGuiMouseCursor_ResizeAll,ImGuiMouseCursor_ResizeNS,ImGuiMouseCursor_ResizeEW,ImGuiMouseCursor_ResizeNESW,ImGuiMouseCursor_ResizeNWSE,ImGuiMouseCursor_Hand,ImGuiMouseCursor_NotAllowed,ImGuiMouseCursor_COUNT}ImGuiMouseCursor_;
typedef enum{ImGuiNavHighlightFlags_None,ImGuiNavHighlightFlags_TypeDefault,ImGuiNavHighlightFlags_TypeThin,ImGuiNavHighlightFlags_AlwaysDraw,ImGuiNavHighlightFlags_NoRounding,}ImGuiNavHighlightFlags_;
typedef enum{ImGuiNavInput_Activate,ImGuiNavInput_Cancel,ImGuiNavInput_Input,ImGuiNavInput_Menu,ImGuiNavInput_DpadLeft,ImGuiNavInput_DpadRight,ImGuiNavInput_DpadUp,ImGuiNavInput_DpadDown,ImGuiNavInput_LStickLeft,ImGuiNavInput_LStickRight,ImGuiNavInput_LStickUp,ImGuiNavInput_LStickDown,ImGuiNavInput_FocusPrev,ImGuiNavInput_FocusNext,ImGuiNavInput_TweakSlow,ImGuiNavInput_TweakFast,ImGuiNavInput_COUNT,}ImGuiNavInput;
typedef enum{ImGuiNavLayer_Main,ImGuiNavLayer_Menu,ImGuiNavLayer_COUNT}ImGuiNavLayer;
typedef enum{ImGuiNavMoveFlags_None,ImGuiNavMoveFlags_LoopX,ImGuiNavMoveFlags_LoopY,ImGuiNavMoveFlags_WrapX,ImGuiNavMoveFlags_WrapY,ImGuiNavMoveFlags_AllowCurrentNavId,ImGuiNavMoveFlags_AlsoScoreVisibleSet,ImGuiNavMoveFlags_ScrollToEdgeY,ImGuiNavMoveFlags_Forwarded,ImGuiNavMoveFlags_DebugNoResult,ImGuiNavMoveFlags_FocusApi,ImGuiNavMoveFlags_Tabbing,ImGuiNavMoveFlags_Activate,ImGuiNavMoveFlags_DontSetNavHighlight,}ImGuiNavMoveFlags_;
typedef enum{ImGuiNextItemDataFlags_None,ImGuiNextItemDataFlags_HasWidth,ImGuiNextItemDataFlags_HasOpen,}ImGuiNextItemDataFlags_;
typedef enum{ImGuiNextWindowDataFlags_None,ImGuiNextWindowDataFlags_HasPos,ImGuiNextWindowDataFlags_HasSize,ImGuiNextWindowDataFlags_HasContentSize,ImGuiNextWindowDataFlags_HasCollapsed,ImGuiNextWindowDataFlags_HasSizeConstraint,ImGuiNextWindowDataFlags_HasFocus,ImGuiNextWindowDataFlags_HasBgAlpha,ImGuiNextWindowDataFlags_HasScroll,ImGuiNextWindowDataFlags_HasViewport,ImGuiNextWindowDataFlags_HasDock,ImGuiNextWindowDataFlags_HasWindowClass,}ImGuiNextWindowDataFlags_;
typedef enum{ImGuiOldColumnFlags_None,ImGuiOldColumnFlags_NoBorder,ImGuiOldColumnFlags_NoResize,ImGuiOldColumnFlags_NoPreserveWidths,ImGuiOldColumnFlags_NoForceWithinWindow,ImGuiOldColumnFlags_GrowParentContentsSize,}ImGuiOldColumnFlags_;
typedef enum{ImGuiPlotType_Lines,ImGuiPlotType_Histogram,}ImGuiPlotType;
typedef enum{ImGuiPopupFlags_None,ImGuiPopupFlags_MouseButtonLeft,ImGuiPopupFlags_MouseButtonRight,ImGuiPopupFlags_MouseButtonMiddle,ImGuiPopupFlags_MouseButtonMask_,ImGuiPopupFlags_MouseButtonDefault_,ImGuiPopupFlags_NoOpenOverExistingPopup,ImGuiPopupFlags_NoOpenOverItems,ImGuiPopupFlags_AnyPopupId,ImGuiPopupFlags_AnyPopupLevel,ImGuiPopupFlags_AnyPopup,}ImGuiPopupFlags_;
typedef enum{ImGuiPopupPositionPolicy_Default,ImGuiPopupPositionPolicy_ComboBox,ImGuiPopupPositionPolicy_Tooltip,}ImGuiPopupPositionPolicy;
typedef enum{ImGuiScrollFlags_None,ImGuiScrollFlags_KeepVisibleEdgeX,ImGuiScrollFlags_KeepVisibleEdgeY,ImGuiScrollFlags_KeepVisibleCenterX,ImGuiScrollFlags_KeepVisibleCenterY,ImGuiScrollFlags_AlwaysCenterX,ImGuiScrollFlags_AlwaysCenterY,ImGuiScrollFlags_NoScrollParent,ImGuiScrollFlags_MaskX_,ImGuiScrollFlags_MaskY_,}ImGuiScrollFlags_;
typedef enum{ImGuiSelectableFlags_NoHoldingActiveID,ImGuiSelectableFlags_SelectOnNav,ImGuiSelectableFlags_SelectOnClick,ImGuiSelectableFlags_SelectOnRelease,ImGuiSelectableFlags_SpanAvailWidth,ImGuiSelectableFlags_SetNavIdOnHover,ImGuiSelectableFlags_NoPadWithHalfSpacing,ImGuiSelectableFlags_NoSetKeyOwner,}ImGuiSelectableFlagsPrivate_;
typedef enum{ImGuiSelectableFlags_None,ImGuiSelectableFlags_DontClosePopups,ImGuiSelectableFlags_SpanAllColumns,ImGuiSelectableFlags_AllowDoubleClick,ImGuiSelectableFlags_Disabled,ImGuiSelectableFlags_AllowItemOverlap,}ImGuiSelectableFlags_;
typedef enum{ImGuiSeparatorFlags_None,ImGuiSeparatorFlags_Horizontal,ImGuiSeparatorFlags_Vertical,ImGuiSeparatorFlags_SpanAllColumns,}ImGuiSeparatorFlags_;